# zeph

./: .gitignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  renovate.json
crates/zeph-a2a/: Cargo.toml  README.md
crates/zeph-a2a/src/: card.rs  client.rs  discovery.rs  error.rs  ibct.rs  jsonrpc.rs  lib.rs  testing.rs  types.rs
crates/zeph-acp/: Cargo.toml  README.md
crates/zeph-acp/src/: agent.rs  custom.rs  error.rs  fs.rs  lib.rs  mcp_bridge.rs  permission.rs  terminal.rs  transport.rs
crates/zeph-acp/tests/: integration.rs
crates/zeph-agent-context/: Cargo.toml  README.md
crates/zeph-agent-context/src/: compaction.rs  error.rs  helpers.rs  lib.rs  memory_backend.rs  retrieved.rs  service.rs  state.rs
crates/zeph-agent-feedback/: Cargo.toml  README.md
crates/zeph-agent-feedback/src/: lib.rs
crates/zeph-agent-persistence/: Cargo.toml  README.md
crates/zeph-agent-persistence/src/: embed.rs  error.rs  graph.rs  lib.rs  request.rs  sanitize.rs  service.rs  state.rs
crates/zeph-agent-tools/: Cargo.toml  README.md
crates/zeph-agent-tools/src/: channel.rs  doom_loop.rs  error.rs  lib.rs  sealed.rs
crates/zeph-bench/: Cargo.toml  README.md
crates/zeph-bench/src/: baseline.rs  channel.rs  cli.rs  dataset.rs  deterministic.rs  error.rs  isolation.rs  lib.rs  results.rs  runner.rs  scenario.rs
crates/zeph-channels/: Cargo.toml  README.md
crates/zeph-channels/benches/: markdown_performance.rs
crates/zeph-channels/src/: any.rs  cli.rs  error.rs  json_cli.rs  lib.rs  line_editor.rs  markdown.rs  telegram.rs  telegram_api_ext.rs  telegram_moderation.rs
crates/zeph-channels/tests/: memory_profile.rs
crates/zeph-commands/: Cargo.toml  README.md
crates/zeph-commands/src/: commands.rs  context.rs  lib.rs  sink.rs
crates/zeph-common/: Cargo.toml  README.md
crates/zeph-common/src/: error_taxonomy.rs  fs_secure.rs  hash.rs  lib.rs  math.rs  memory.rs  net.rs  patterns.rs  policy.rs  quarantine.rs  sanitize.rs  secret.rs  security_event.rs  spawner.rs  task_supervisor.rs  text.rs  treesitter.rs  trust_level.rs  types.rs
crates/zeph-config/: Cargo.toml  README.md
crates/zeph-config/config/: default.toml
crates/zeph-config/src/: agent.rs  channels.rs  classifiers.rs  cli.rs  defaults.rs  dump_format.rs  env.rs  error.rs  execution.rs  experiment.rs  features.rs  hooks.rs  learning.rs  lib.rs  loader.rs  logging.rs  mcp_security.rs  memory.rs  metrics.rs  migrate.rs  notifications.rs  providers.rs  quality.rs  rate_limit.rs  root.rs  sanitizer.rs  security.rs  session.rs  subagent.rs  telemetry.rs  tools.rs  ui.rs  vigil.rs
crates/zeph-config/tests/: default_toml_consistency.rs
crates/zeph-context/: Cargo.toml  README.md
crates/zeph-context/src/: assembler.rs  budget.rs  compression_feedback.rs  error.rs  input.rs  lib.rs  manager.rs  microcompact.rs  slot.rs  summarization.rs  turn_context.rs  typed_page.rs
crates/zeph-core/: Cargo.toml  README.md
crates/zeph-core/benches/: context_building.rs
crates/zeph-core/config/: default.toml
crates/zeph-core/src/: alloc_layer.rs  bootstrap.rs  channel.rs  config.rs  config_watcher.rs  context.rs  cost.rs  daemon.rs  debug_dump.rs  diff.rs  file_watcher.rs  hash.rs  http.rs  instructions.rs  instrumented_channel.rs  json_event_layer.rs  json_event_sink.rs  lib.rs  memory_tools.rs  metrics.rs  metrics_bridge.rs  notifications.rs  overflow_tools.rs  project.rs  provider_factory.rs  redact.rs  runtime_context.rs  runtime_layer.rs  sanitizer.rs  skill_invoker.rs  skill_loader.rs  system_metrics.rs  task_supervisor.rs  testing.rs  text.rs  vault.rs
crates/zeph-core/tests/: turn_lifecycle.rs  vault_integration.rs
crates/zeph-db/: Cargo.toml  README.md
crates/zeph-db/src/: bounds.rs  dialect.rs  driver.rs  error.rs  fts.rs  lib.rs  migrate.rs  pool.rs  transaction.rs
crates/zeph-db/tests/: postgres_integration.rs
crates/zeph-experiments/: Cargo.toml  README.md
crates/zeph-experiments/src/: benchmark.rs  engine.rs  error.rs  evaluator.rs  generator.rs  grid.rs  lib.rs  neighborhood.rs  random.rs  search_space.rs  snapshot.rs  types.rs
crates/zeph-gateway/: Cargo.toml  README.md
crates/zeph-gateway/src/: error.rs  handlers.rs  lib.rs  router.rs  server.rs
crates/zeph-index/: Cargo.toml  README.md
crates/zeph-index/src/: chunker.rs  context.rs  error.rs  indexer.rs  languages.rs  lib.rs  mcp_server.rs  repo_map.rs  retriever.rs  store.rs  watcher.rs
crates/zeph-llm/: Cargo.toml  README.md
crates/zeph-llm/benches/: candle_inference.rs  classifier.rs
crates/zeph-llm/src/: any.rs  candle_whisper.rs  claude.rs  compatible.rs  device.rs  ema.rs  embed.rs  error.rs  extractor.rs  gemini.rs  http.rs  lib.rs  mock.rs  model_cache.rs  ollama.rs  openai.rs  provider.rs  provider_dyn.rs  retry.rs  router.rs  schema.rs  sse.rs  stt.rs  testing.rs  usage.rs  whisper.rs
crates/zeph-llm/tests/: gonka_live.rs
crates/zeph-mcp/: Cargo.toml  README.md
crates/zeph-mcp/src/: attestation.rs  caller.rs  client.rs  elicitation.rs  embedding_guard.rs  error.rs  executor.rs  lib.rs  manager.rs  mock.rs  oauth.rs  policy.rs  prober.rs  prompt.rs  pruning.rs  registry.rs  sanitize.rs  security.rs  semantic_index.rs  testing.rs  tool.rs  trust_score.rs
crates/zeph-memory/: Cargo.toml  README.md
crates/zeph-memory/benches/: token_estimation.rs
crates/zeph-memory/migrations/: 011_vector_store.sql  018_skill_outcome_detail.sql  020_eviction_columns.sql  024_entity_canonicalization.sql  026_acp_session_conversation.sql  028_community_fingerprint.sql  029_graph_edge_dedup.sql  030_graph_edges_temporal_index.sql  040_plan_cache.sql  (+11 more)
crates/zeph-orchestration/: Cargo.toml  README.md
crates/zeph-plugins/: Cargo.toml  README.md
crates/zeph-sanitizer/: Cargo.toml  README.md
crates/zeph-scheduler/: Cargo.toml  README.md
crates/zeph-skills/: Cargo.toml  README.md  build.rs  skills
crates/zeph-subagent/: Cargo.toml  README.md
crates/zeph-tools/: Cargo.toml  README.md
crates/zeph-tui/: Cargo.toml  README.md
crates/zeph-vault/: Cargo.toml  README.md
(+1292 files in other folders)
