[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.88"
version = "0.15.0"
authors = ["bug-ops"]
license = "MIT"
repository = "https://github.com/bug-ops/zeph"
homepage = "https://github.com/bug-ops/zeph"
documentation = "https://docs.rs/zeph"
keywords = ["ai", "agent", "llm", "inference", "skills"]
categories = ["command-line-utilities", "science"]

[workspace.dependencies]
age = { version = "0.11.2", default-features = false }
agent-client-protocol = { version = "0.10", features = [
    "unstable_session_list",
    "unstable_session_fork",
    "unstable_session_resume",
    "unstable_session_usage",
    "unstable_session_model",
    "unstable_session_info_update",
] }
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
blake3 = "1.8"
bytemuck = "1.25"
candle-core = { version = "0.9", default-features = false }
candle-nn = { version = "0.9", default-features = false }
candle-transformers = { version = "0.9", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["std"] }
dashmap = "6.1"
clap = { version = "4.6", features = ["derive", "env"] }
criterion = "0.8"
cron = "0.15"
crossterm = "0.29"
dialoguer = "0.12"
dirs = "6.0"
eventsource-stream = "0.2"
futures = "0.3"
futures-core = "0.3"
glob = "0.3.3"
hf-hub = { version = "0.5", default-features = false, features = ["tokio", "rustls-tls", "ureq"] }
http-body-util = "0.1"
ignore = "0.4"
indoc = "2"
insta = { version = "1.46.3", features = ["toml", "filters"] }
notify = "8"
notify-debouncer-mini = "0.7"
nucleo-matcher = "0.3.1"
ordered-float = { version = "4", features = ["serde"] }
ollama-rs = { version = "0.3", default-features = false, features = ["rustls", "stream"] }
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
pdf-extract = "0.10"
petgraph = { version = "0.8", default-features = false }
proptest = "1.10"
pulldown-cmark = "0.13"
qdrant-client = { version = "1.17", default-features = false }
rand = "0.9"
rand_distr = "0.5"
ratatui = "0.30"
regex = "1.12"
reqwest = { version = "0.13", default-features = false }
rmcp = "0.17"
rubato = "1.0"
schemars = "1.2"
scrape-core = "0.2"
semver = "1.0.27"
serde = "1.0"
serde_json = "1.0"
serde_norway = "0.9.42"
serial_test = "3.4"
similar = "2.7"
sqlx = { version = "0.8", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlite"] }
subtle = "2.6"
symphonia = { version = "0.5.5", default-features = false, features = ["mp3", "ogg", "wav", "flac", "pcm"] }
teloxide = { version = "0.17", default-features = false, features = ["rustls", "ctrlc_handler", "macros"] }
tempfile = "3.27"
tiktoken-rs = "0.9"
testcontainers = "0.27"
thiserror = "2.0"
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }
tokio = "1"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.28", default-features = false }
tokio-util = "0.7"
toml = "1.0"
toml_edit = "0.22"
tower = "0.5"
tower-http = { version = "0.6", default-features = false }
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tree-sitter-go = "0.25"
tree-sitter-highlight = "0.26"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
tree-sitter-md = "0.5"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23"
unicode-width = "0.2"
url = "2.5"
uuid = "1.21"
wiremock = "0.6.5"
zeroize = { version = "1", features = ["derive", "serde"] }
zeph-a2a = { path = "crates/zeph-a2a", version = "0.15.0" }
zeph-acp = { path = "crates/zeph-acp", version = "0.15.0" }
zeph-channels = { path = "crates/zeph-channels", version = "0.15.0" }
zeph-core = { path = "crates/zeph-core", version = "0.15.0" }
zeph-gateway = { path = "crates/zeph-gateway", version = "0.15.0" }
zeph-index = { path = "crates/zeph-index", version = "0.15.0" }
zeph-llm = { path = "crates/zeph-llm", version = "0.15.0" }
zeph-mcp = { path = "crates/zeph-mcp", version = "0.15.0" }
zeph-memory = { path = "crates/zeph-memory", version = "0.15.0" }
zeph-scheduler = { path = "crates/zeph-scheduler", version = "0.15.0" }
zeph-skills = { path = "crates/zeph-skills", version = "0.15.0" }
zeph-tools = { path = "crates/zeph-tools", version = "0.15.0" }
zeph-tui = { path = "crates/zeph-tui", version = "0.15.0" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[package]
name = "zeph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Lightweight AI agent with hybrid inference, skills-first architecture, and multi-channel I/O"
readme = "README.md"

[features]
default = []
full = ["a2a", "acp", "acp-http", "acp-unstable", "discord", "experiments", "gateway", "lsp-context", "otel", "pdf", "scheduler", "slack", "stt", "tui"]
a2a = ["dep:zeph-a2a", "zeph-a2a?/server"]
acp = ["dep:zeph-acp"]
acp-http = ["acp", "dep:axum", "zeph-acp/acp-http"]
acp-unstable = ["acp", "zeph-acp/unstable-session-list", "zeph-acp/unstable-session-fork", "zeph-acp/unstable-session-resume"]
candle = ["zeph-llm/candle", "zeph-core/candle"]
metal = ["zeph-llm/metal", "zeph-core/metal"]
cuda = ["zeph-llm/cuda", "zeph-core/cuda"]
tui = ["dep:zeph-tui"]
discord = ["zeph-channels/discord"]
slack = ["zeph-channels/slack"]
gateway = ["dep:zeph-gateway"]
scheduler = ["dep:zeph-scheduler", "dep:cron", "dep:schemars", "dep:chrono", "zeph-core/scheduler"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]
pdf = ["zeph-memory/pdf"]
experiments = ["zeph-core/experiments", "zeph-memory/experiments", "zeph-tui?/experiments"]
lsp-context = ["zeph-core/lsp-context", "zeph-tui?/lsp-context"]
stt = ["zeph-llm/stt", "dep:reqwest"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
dialoguer.workspace = true
futures.workspace = true
glob.workspace = true
rmcp.workspace = true
similar.workspace = true
toml.workspace = true
toml_edit.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
zeph-a2a = { workspace = true, optional = true }
zeph-acp = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
zeph-channels.workspace = true
zeph-index.workspace = true
sqlx.workspace = true
zeph-mcp.workspace = true
zeph-core.workspace = true
zeph-llm.workspace = true
zeph-memory.workspace = true
zeph-skills.workspace = true
zeph-tools.workspace = true
zeph-gateway = { workspace = true, optional = true }
zeph-scheduler = { workspace = true, optional = true }
zeph-tui = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["rustls"] }
serde_json.workspace = true
cron = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
serde.workspace = true
tempfile.workspace = true
url.workspace = true

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace = true
zeph-core.workspace = true
zeph-llm.workspace = true
zeph-memory.workspace = true
zeph-skills.workspace = true

[lints]
workspace = true

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
debug = true

[profile.ci]
inherits = "dev"
debug = 0
incremental = false
codegen-units = 16
