[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.94"
version = "0.19.2"
authors = ["bug-ops"]
license = "MIT"
repository = "https://github.com/bug-ops/zeph"
homepage = "https://github.com/bug-ops/zeph"
documentation = "https://bug-ops.github.io/zeph/"
keywords = ["ai", "agent", "llm", "inference", "skills"]
categories = ["command-line-utilities", "science"]
publish = true

[workspace.dependencies]
age = { version = "0.11.2", default-features = false }
agent-client-protocol = "0.10"
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8.9"
base64 = "0.22"
blake3 = "1.8"
bytemuck = "1.25"
candle-core = { version = "0.10", default-features = false }
candle-nn = { version = "0.10", default-features = false }
candle-transformers = { version = "0.10", default-features = false }
chrono = { version = "0.4", default-features = false }
clap = "4.6"
cpu-time = "1.0"
criterion = "0.8"
cron = "0.16"
crossterm = "0.29"
dashmap = "6.1"
dialoguer = "0.12"
dirs = "6.0"
eventsource-stream = "0.2"
expectrl = "0.8"
futures = "0.3"
futures-core = "0.3"
glob = "0.3.3"
hf-hub = { version = "0.5", default-features = false }
hex = "0.4"
http = "1.4"
http-body-util = "0.1"
ignore = "0.4"
include_dir = { version = "0.7", features = ["glob"] }
indexmap = "2"
indoc = "2"
insta = "1.47"
notify = "8"
notify-debouncer-mini = "0.7"
nucleo-matcher = "0.3.1"
ollama-rs = { version = "0.3", default-features = false }
open = "5"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31.1", default-features = false }
opentelemetry_sdk = { version = "0.31", default-features = false }
ordered-float = "5.3"
pdf-extract = "0.10"
metrics = "0.24"
metrics-util = "0.20"
arc-swap = "1.9"
parking_lot = "0.12"
prometheus-client = "0.24"
petgraph = "0.8"
proptest = "1.11"
pulldown-cmark = "0.13"
qdrant-client = { version = "1.17", default-features = false }
rand = "0.10"
rand_distr = "0.6"
ratatui = "0.30"
regex = "1.12"
reqwest = { version = "0.13", default-features = false }
rmcp = "1.5"
audioadapter-buffers = "3.0"
rubato = "2.0"
schemars = "1.2"
hmac = "0.13"
sha2 = "0.11"
scrape-core = "0.2"
semver = "1.0"
serde = "1.0.228"
serde_json = "1.0.149"
serde_norway = "0.9.42"
serial_test = "3.4"
globset = "0.4"
similar = "3.1"
sqlx = { version = "0.8", default-features = false }
subtle = "2.6"
sysinfo = { version = "0.38.4", default-features = false, features = ["system"] }
pprof = { version = "0.15.0", default-features = false }
symphonia = { version = "0.5.5", default-features = false }
teloxide = { version = "0.17", default-features = false }
tempfile = "3.27"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", default-features = false }
thiserror = "2.0"
throbber-widgets-tui = "0.11"
tiktoken-rs = "0.11"
tokenizers = { version = "0.22", default-features = false }
tokio = "1"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.29", default-features = false }
tokio-util = "0.7"
toml = "1.1"
toml_edit = "0.25"
tower = "0.5.3"
tower-http = { version = "0.6.8", default-features = false }
tracing = "0.1"
tracing-appender = "0.2"
tracing-chrome = "0.7"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", default-features = false, features = ["parking_lot"] }
tracing-test = "0.2"
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tree-sitter-go = "0.25"
tree-sitter-highlight = "0.26"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
tree-sitter-md = "0.5"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23"
unicode-normalization = "0.1"
unicode-width = "0.2"
url = "2.5"
uuid = "1.23"
walkdir = "2.5"
wiremock = "0.6.5"
zeroize = { version = "1", default-features = false }
zeph-a2a = { path = "crates/zeph-a2a", version = "0.19.2" }
zeph-bench = { path = "crates/zeph-bench", version = "0.19.2" }
zeph-acp = { path = "crates/zeph-acp", version = "0.19.2" }
zeph-db = { path = "crates/zeph-db", default-features = false, version = "0.19.2" }
zeph-channels = { path = "crates/zeph-channels", version = "0.19.2" }
zeph-common = { path = "crates/zeph-common", version = "0.19.2" }
zeph-config = { path = "crates/zeph-config", version = "0.19.2" }
zeph-commands = { path = "crates/zeph-commands", version = "0.19.2" }
zeph-context = { path = "crates/zeph-context", version = "0.19.2" }
zeph-core = { path = "crates/zeph-core", version = "0.19.2" }
zeph-experiments = { path = "crates/zeph-experiments", version = "0.19.2" }
zeph-gateway = { path = "crates/zeph-gateway", version = "0.19.2" }
zeph-index = { path = "crates/zeph-index", version = "0.19.2" }
zeph-llm = { path = "crates/zeph-llm", version = "0.19.2" }
zeph-mcp = { path = "crates/zeph-mcp", version = "0.19.2" }
zeph-memory = { path = "crates/zeph-memory", default-features = false, version = "0.19.2" }
zeph-scheduler = { path = "crates/zeph-scheduler", version = "0.19.2" }
zeph-skills = { path = "crates/zeph-skills", version = "0.19.2" }
zeph-tools = { path = "crates/zeph-tools", version = "0.19.2" }
zeph-tui = { path = "crates/zeph-tui", version = "0.19.2" }
zeph-vault = { path = "crates/zeph-vault", version = "0.19.2" }
zeph-orchestration = { path = "crates/zeph-orchestration", version = "0.19.2" }
zeph-plugins = { path = "crates/zeph-plugins", version = "0.19.2" }
zeph-sanitizer = { path = "crates/zeph-sanitizer", version = "0.19.2" }
zeph-subagent = { path = "crates/zeph-subagent", version = "0.19.2" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[package]
name = "zeph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Lightweight AI agent with hybrid inference, skills-first architecture, and multi-channel I/O"
readme = "README.md"

[features]
default = ["scheduler", "sqlite"]

# === Use-case bundles ===
desktop = ["tui"]
ide     = ["acp", "acp-http"]
server  = ["gateway", "a2a", "otel", "prometheus"]
chat    = ["discord", "slack"]
ml      = ["candle", "pdf"]
full    = ["desktop", "ide", "server", "chat", "pdf", "scheduler", "classifiers", "profiling", "task-metrics", "sandbox"]
sandbox = ["zeph-tools/sandbox"]
bench   = ["dep:zeph-bench"]

# === Individual feature flags ===
a2a = ["dep:zeph-a2a", "zeph-a2a?/server", "zeph-a2a?/ibct"]
acp = ["dep:zeph-acp", "zeph-acp/unstable-session-close", "zeph-acp/unstable-session-fork", "zeph-acp/unstable-session-resume", "zeph-acp/unstable-elicitation", "zeph-acp/unstable-logout"]
acp-http = ["acp", "dep:axum", "zeph-acp/acp-http"]
candle = ["zeph-llm/candle", "zeph-core/candle"]
classifiers = ["candle", "zeph-llm/classifiers", "zeph-sanitizer/classifiers", "zeph-core/classifiers"]
metal = ["candle", "zeph-llm/metal", "zeph-core/metal"]
cuda = ["candle", "zeph-llm/cuda", "zeph-core/cuda"]
tui = ["dep:zeph-tui"]
discord = ["zeph-channels/discord"]
slack = ["zeph-channels/slack"]
gateway = ["dep:zeph-gateway"]
prometheus = ["gateway", "dep:prometheus-client", "zeph-gateway/prometheus"]
scheduler = ["dep:zeph-scheduler", "dep:blake3", "dep:cron", "dep:schemars", "dep:chrono", "zeph-core/scheduler"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]
pdf = ["zeph-memory/pdf"]
profiling = [
    "dep:tracing-chrome",
    "dep:chrono",
    "dep:uuid",
    "dep:sysinfo",
    "zeph-core/profiling",
    "zeph-core/sysinfo",
    "zeph-llm/profiling",
    "zeph-memory/profiling",
    "zeph-tools/profiling",
    "zeph-skills/profiling",
    "zeph-mcp/profiling",
    "zeph-channels/profiling",
]
profiling-alloc = ["profiling", "zeph-core/profiling-alloc"]
profiling-pyroscope = ["profiling", "otel", "dep:pprof"]
task-metrics = ["zeph-core/task-metrics"]
# Database backend selection — mutually exclusive. Default includes sqlite.
# NOTE: --all-features activates both, triggering compile_error! in zeph-db.
# Use --features full or --features full,postgres instead.
sqlite = ["zeph-db/sqlite", "zeph-memory/sqlite"]
postgres = ["zeph-db/postgres", "zeph-memory/postgres"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }
chrono = { workspace = true, optional = true, features = ["clock"] }
clap = { workspace = true, features = ["derive", "env"] }
cron = { workspace = true, optional = true }
dialoguer.workspace = true
dirs.workspace = true
futures.workspace = true
glob.workspace = true
opentelemetry = { workspace = true, optional = true }
# NOTE: grpc-tonic pulls tonic ^0.14 which coexists with qdrant-client's tonic 0.12.
# Binary bloat is acceptable until qdrant-client upgrades (tracked in #2347).
opentelemetry-otlp = { workspace = true, optional = true, features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { workspace = true, optional = true, features = ["trace"] }
parking_lot.workspace = true
prometheus-client = { workspace = true, optional = true }
reqwest.workspace = true
rmcp.workspace = true
schemars = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
similar.workspace = true
tempfile.workspace = true
zeph-db.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-chrome = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
sysinfo = { workspace = true, optional = true }
pprof = { workspace = true, optional = true, features = ["prost-codec"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url.workspace = true
uuid = { workspace = true, optional = true, features = ["v4"] }
zeph-a2a = { workspace = true, optional = true }
zeph-acp = { workspace = true, optional = true }
zeph-channels.workspace = true
zeph-common.workspace = true
zeph-config.workspace = true
zeph-core.workspace = true
zeph-gateway = { workspace = true, optional = true }
zeph-index.workspace = true
zeph-llm.workspace = true
zeph-memory.workspace = true
zeph-mcp.workspace = true
zeph-sanitizer.workspace = true
zeph-scheduler = { workspace = true, optional = true }
zeph-experiments.workspace = true
zeph-orchestration.workspace = true
zeph-plugins.workspace = true
zeph-skills.workspace = true
zeph-subagent.workspace = true
zeph-tools.workspace = true
zeph-tui = { workspace = true, optional = true }
zeph-bench = { workspace = true, optional = true }

[dev-dependencies]
insta.workspace = true
serial_test.workspace = true
sqlx.workspace = true
tempfile.workspace = true
zeph-core.workspace = true
zeph-llm.workspace = true
zeph-memory.workspace = true
zeph-skills.workspace = true
# Features are declared by the crates that use them, see workspace dependencies

[lints]
workspace = true

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
debug = true

[profile.ci]
inherits = "dev"
debug = 0
incremental = false
codegen-units = 16
