[package]
name = "zeph-a2a"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "A2A protocol client and server with agent discovery for Zeph"
readme = "README.md"

[features]
ibct = ["dep:hmac", "dep:sha2"]
server = ["dep:axum", "dep:blake3", "dep:subtle", "dep:tower", "dep:tower-http"]

[dependencies]
axum = { workspace = true, optional = true }
base64.workspace = true
blake3 = { workspace = true, optional = true }
eventsource-stream.workspace = true
futures.workspace = true
futures-core.workspace = true
hex.workspace = true
hmac = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "sync"] }
tokio-stream.workspace = true
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true, features = ["limit", "trace"] }
tracing.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
zeph-common.workspace = true
# See https://github.com/bug-ops/zeph (workspace dependencies only contain versions)

[dev-dependencies]
axum = { workspace = true, features = ["macros"] }
http-body-util.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower.workspace = true
wiremock.workspace = true

[lints]
workspace = true
