[package]
name = "zeph-acp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/zeph-acp"
keywords.workspace = true
categories.workspace = true
description = "ACP (Agent Client Protocol) server for IDE embedding"
readme = "README.md"

[features]
default = [
    "unstable-session-list",
    "unstable-session-fork",
    "unstable-session-resume",
    "unstable-session-usage",
    "unstable-session-model",
    "unstable-session-info-update",
]
acp-http = ["dep:axum", "dep:blake3", "dep:dashmap", "dep:async-stream", "dep:tower-http", "dep:subtle", "dep:tower"]
unstable-session-list = ["agent-client-protocol/unstable_session_list"]
unstable-session-fork = ["agent-client-protocol/unstable_session_fork"]
unstable-session-resume = ["agent-client-protocol/unstable_session_resume"]
unstable-session-usage = ["agent-client-protocol/unstable_session_usage"]
unstable-session-model = ["agent-client-protocol/unstable_session_model"]
unstable-session-info-update = ["agent-client-protocol/unstable_session_info_update"]

[dependencies]
agent-client-protocol = { workspace = true }
async-trait.workspace = true
base64.workspace = true
chrono = { workspace = true }
dirs.workspace = true
futures.workspace = true
glob.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["io-std", "sync", "macros", "rt", "test-util"] }
tokio-util = { workspace = true, features = ["compat", "rt"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
zeph-core.workspace = true
zeph-llm.workspace = true
zeph-memory.workspace = true
zeph-mcp.workspace = true
zeph-tools.workspace = true
axum = { workspace = true, features = ["ws"], optional = true }
async-stream = { version = "0.3", optional = true }
dashmap = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }
tower = { workspace = true, features = ["util"], optional = true }
tower-http = { workspace = true, features = ["cors", "limit"], optional = true }

[dev-dependencies]
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
axum = { workspace = true, features = ["ws"] }
tokio-tungstenite.workspace = true

[lints]
workspace = true
