[package]
name = "zeph-acp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/zeph-acp"
keywords.workspace = true
categories.workspace = true
description = "ACP (Agent Client Protocol) server for IDE embedding"
readme = "README.md"

[features]
default = [
    "unstable-session-fork",
    "unstable-session-resume",
    "unstable-session-usage",
    "unstable-session-model",
]
acp-http = ["dep:axum", "dep:blake3", "dep:dashmap", "dep:async-stream", "dep:tower-http", "dep:subtle", "dep:tower"]
unstable-session-fork = ["agent-client-protocol/unstable_session_fork"]
unstable-session-resume = ["agent-client-protocol/unstable_session_resume"]
unstable-session-usage = ["agent-client-protocol/unstable_session_usage"]
unstable-session-model = ["agent-client-protocol/unstable_session_model"]

[dependencies]
agent-client-protocol = { workspace = true, features = [
    "unstable_session_fork",
    "unstable_session_resume",
    "unstable_session_usage",
    "unstable_session_model",
] }
async-stream = { workspace = true, optional = true }
async-trait.workspace = true
axum = { workspace = true, features = ["ws"], optional = true }
base64.workspace = true
blake3 = { workspace = true, optional = true }
chrono = { workspace = true, features = ["std", "clock"] }
dashmap = { workspace = true, optional = true }
dirs.workspace = true
futures.workspace = true
glob.workspace = true
reqwest = { workspace = true, features = ["rustls", "stream"] }
rmcp.workspace = true
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
subtle = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["io-std", "sync", "macros", "rt", "test-util"] }
tokio-util = { workspace = true, features = ["compat", "rt"] }
toml.workspace = true
tower = { workspace = true, features = ["util"], optional = true }
tower-http = { workspace = true, features = ["cors", "limit"], optional = true }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
zeph-core.workspace = true
zeph-llm.workspace = true
zeph-memory.workspace = true
zeph-mcp.workspace = true
zeph-tools.workspace = true
# See https://github.com/bug-ops/zeph (workspace dependencies only contain versions)

[dev-dependencies]
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
axum = { workspace = true, features = ["ws"] }
tokio-tungstenite.workspace = true

[lints]
workspace = true
