[package]
name = "zeph-acp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "ACP (Agent Client Protocol) server for IDE embedding"
readme = "README.md"

[features]
default = [
    "unstable-session-close",
    "unstable-session-fork",
    "unstable-session-resume",
    "unstable-session-usage",
    "unstable-session-model",
    "unstable-elicitation",
    "unstable-logout",
]
acp-http = ["dep:axum", "dep:blake3", "dep:dashmap", "dep:async-stream", "dep:tower-http", "dep:subtle", "dep:tower"]
unstable-session-close = ["agent-client-protocol/unstable_session_close"]
unstable-session-fork = ["agent-client-protocol/unstable_session_fork"]
unstable-session-resume = ["agent-client-protocol/unstable_session_resume"]
unstable-session-usage = ["agent-client-protocol/unstable_session_usage"]
unstable-session-model = ["agent-client-protocol/unstable_session_model"]
# Exposes schema types (ElicitationRequest, etc.); SDK methods not yet wired in agent-client-protocol 0.10.3.
unstable-elicitation = ["agent-client-protocol/unstable_elicitation"]
unstable-logout = ["agent-client-protocol/unstable_logout"]
unstable-auth-methods = ["agent-client-protocol/unstable_auth_methods"]
unstable-boolean-config = ["agent-client-protocol/unstable_boolean_config"]
unstable-message-id = ["agent-client-protocol/unstable_message_id"]
unstable-session-add-dirs = ["agent-client-protocol/unstable_session_additional_directories"]

[dependencies]
agent-client-protocol = { workspace = true }
async-stream = { workspace = true, optional = true }
async-trait.workspace = true
axum = { workspace = true, features = ["ws"], optional = true }
base64.workspace = true
blake3 = { workspace = true, optional = true }
chrono = { workspace = true, features = ["std", "clock"] }
dashmap = { workspace = true, optional = true }
dirs.workspace = true
futures.workspace = true
glob.workspace = true
parking_lot.workspace = true
reqwest = { workspace = true, features = ["rustls", "stream"] }
rmcp.workspace = true
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
subtle = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["io-std", "sync", "macros", "rt", "test-util"] }
tokio-util = { workspace = true, features = ["compat", "rt"] }
toml.workspace = true
tower = { workspace = true, features = ["util"], optional = true }
tower-http = { workspace = true, features = ["cors", "limit"], optional = true }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
zeph-common.workspace = true
zeph-core.workspace = true
zeph-llm.workspace = true
zeph-memory.workspace = true
zeph-mcp.workspace = true
zeph-tools.workspace = true
# See https://github.com/bug-ops/zeph (workspace dependencies only contain versions)

[dev-dependencies]
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
axum = { workspace = true, features = ["ws"] }
tokio-tungstenite = { workspace = true, features = ["connect"] }

[lints]
workspace = true
